k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  hello-service
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 5678
